--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -3,7 +3,7 @@
 ---
 
 <div class="bg-gray-900 pt-10">
-  <div class="max-w-[1200px] mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
+  <div class="max-w-300 mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
     <!-- Columna 1: Logo e información -->
     <section class="flex flex-col items-start justify-start p-6">
       <div class="flex items-center gap-3">
@@ -185,7 +185,7 @@
       © 2025 Trail Valle de Arbas. Todos los derechos reservados.
     </p>
     <p class="text-xs text-center text-[#e49a69] pt-2">
-      Crafted by <a href="https://www.linkedin.com/in/diego-díaz-mendaña" target="_blank" rel="noopener" id="my-link">Diego Díaz Mendaña</a>
+      Organizado por <a href="https://orcapalencia.com/web/inicio/" target="_blank" id="my-link">ORCA</a>
     </p>
   </section>
 </div>
