--- a/src/components/fields/DistanceField.astro
+++ b/src/components/fields/DistanceField.astro
@@ -14,7 +14,7 @@ const { name, description, distance, uphill, link } = Astro.props;
       <span class="distance-label">{uphill} m+</span>
     </div>
   </div>
-  <a href={`categorias#${link}`} class="button-link">
+  <a href={`#${link}`} class="button-link">
     <button
       class="px-6 py-2 bg-[#e49a69] text-sm text-white rounded hover:bg-[#d88b5c] transition-colors focus:ring-2 focus:ring-[#e49a69] focus:ring-opacity-50 cursor-pointer"
     >
