--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -96,7 +96,7 @@ const sponsors: Sponsor[] = [
       poster="/frameTrail2024.png"
       title="Trail Valle de Arbas 2025"
     />
-    <main class="max-w-[1200px] mx-auto">
+    <main class="max-w-300 mx-auto">
       <div class="fade-in-up">
         <h2 class="text-3xl font-bold text-center mt-10 mb-4 animate-title">
           Descubre el <span class="text-gradient">Valle de Arbas</span>
@@ -212,7 +212,7 @@ const sponsors: Sponsor[] = [
 
       <section
         id="sponsors"
-        class="sponsors-section py-16 mt-8 bg-gradient-to-b from-white to-gray-50"
+        class="sponsors-section py-16 mt-8 bg-linear-to-b from-white to-gray-50"
       >
         <SectionTitle
           title="Nuestros patrocinadores"
@@ -224,16 +224,16 @@ const sponsors: Sponsor[] = [
           <SponsorGrid sponsors={sponsors} />
         </div>
         <div
-          class="become-sponsor text-center mt-16 bg-white py-10 px-6 rounded-lg shadow-sm max-w-[900px] mx-auto reveal-element"
+          class="become-sponsor text-center mt-16 bg-white py-10 px-6 rounded-lg shadow-sm max-w-225 mx-auto reveal-element"
         >
           <h3 class="text-2xl font-semibold mb-4">¿Te gustaría ser patrocinador?</h3>
-          <p class="text-base w-[90%] mx-auto max-w-[600px] mb-6">
+          <p class="text-base w-[90%] mx-auto max-w-150 mb-6">
             Si tu empresa está interesada en patrocinar el Trail Valle de Arbas, no dudes en
             contactarnos. Tenemos diferentes opciones de patrocinio adaptadas a tus necesidades.
           </p>
           <a
             href="/contacto"
-            class="btn-animated inline-block px-8 py-3 bg-gradient-to-r from-[#f97316] to-[#e49a69] text-white font-semibold rounded-lg transition-all hover:shadow-lg hover:-translate-y-1 hover:from-[#e49a69] hover:to-[#f97316]"
+            class="btn-animated inline-block px-8 py-3 bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold rounded-lg transition-all hover:shadow-lg hover:-translate-y-1 hover:from-[#e49a69] hover:to-[#f97316]"
           >
             Contacta con nosotros
           </a>
