--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -17,11 +17,10 @@ import CallToAction from '../components/CallToAction.astro';
       subtitle="Todo lo que necesitas saber para disfrutar al máximo de tu experiencia en el Trail Valle de Arbas 2025: dónde dormir, comer y qué hacer antes o después de la carrera."
     />
 
-    <article class="pt-10 w-[90%] mx-auto max-w-[1200px] mb-20">
+    <article class="pt-10 w-[90%] mx-auto max-w-300 mb-20">
       <div class="mb-12 bg-white rounded-lg shadow-md overflow-hidden">
-        <div class="bg-gradient-to-r from-[#f97316] to-[#e49a69] px-6 py-4 reveal-element">
-          <h2 class="text-2xl font-bold text-white fade-in-left">Alojamientos</h2>
-          <div class="expanding-line mt-2 w-0 h-1 bg-white opacity-70"></div>
+        <div class="bg-linear-to-r from-[#f97316] to-[#e49a69] px-6 py-4 reveal-element">
+          <h2 class="text-2xl font-bold text-white">Alojamientos</h2>
         </div>
         
         <div class="p-6">
@@ -158,9 +157,8 @@ import CallToAction from '../components/CallToAction.astro';
       </div>
 
       <div class="mb-12 bg-white rounded-lg shadow-md overflow-hidden">
-        <div class="bg-gradient-to-r from-[#f97316] to-[#e49a69] px-6 py-4 reveal-element">
-          <h2 class="text-2xl font-bold text-white fade-in-left">Dónde comer</h2>
-          <div class="expanding-line mt-2 w-0 h-1 bg-white opacity-70"></div>
+        <div class="bg-linear-to-r from-[#f97316] to-[#e49a69] px-6 py-4 reveal-element">
+          <h2 class="text-2xl font-bold text-white">Dónde comer</h2>
         </div>
         
         <div class="p-6">
@@ -266,9 +264,8 @@ import CallToAction from '../components/CallToAction.astro';
       </div>
 
       <div class="mb-12 bg-white rounded-lg shadow-md overflow-hidden">
-        <div class="bg-gradient-to-r from-[#f97316] to-[#e49a69] px-6 py-4 reveal-element">
-          <h2 class="text-2xl font-bold text-white fade-in-left">Qué hacer en la zona</h2>
-          <div class="expanding-line mt-2 w-0 h-1 bg-white opacity-70"></div>
+        <div class="bg-linear-to-r from-[#f97316] to-[#e49a69] px-6 py-4 reveal-element">
+          <h2 class="text-2xl font-bold text-white">Qué hacer en la zona</h2>
         </div>
         
         <div class="p-6">
