cambio texto pagina inicial

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -102,7 +102,7 @@ const sponsors: Sponsor[] = [
           Descubre el <span class="text-gradient">Valle de Arbas</span>
         </h2>
         <p class="text-center text-base mb-8 w-[90%] mx-auto animate-text">
-          Bienvenido al Valle de Arbas, donde el 10 de Mayo se celebrará la tercera edición de la
+          Bienvenido al Valle de Arbas, donde el 22 y el 23 de Mayo se celebrará la tercera edición de la
           carrera <span class="text-gradient font-bold">TRAIL VALLE DE ARBAS</span>. Como puedes ver
           en las fotos se trata de un valle que no deja indiferente a nadie.
         </p>
@@ -147,9 +147,9 @@ const sponsors: Sponsor[] = [
 
         <InfoSection
           title="Multiples categorías"
-          description="Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti."
-          cardTitle="3 Distancias"
-          cardDescription="Desde 10km hasta 42km, para todos los niveles."
+          description="Hemos preparado varias pruebas en el trail para que puedas elegir la que más se adapte a ti."
+          cardTitle="2 Distancias y una para cadetes e infantiles"
+          cardDescription="Desde 5'5km hasta 23km, para todos los niveles."
           cardIcon="M4 4v15a1 1 0 0 0 1 1h15M8 16l2.5-5.5 3 3L17.273 7 20 9.667"
           cardLink="/info#carrera-montana"
         />
@@ -183,7 +183,7 @@ const sponsors: Sponsor[] = [
 
         <InfoSection
           title="Inscripción"
-          description="La inscripción está abierta hasta el 1 de Mayo. No te quedes sin tu dorsal."
+          description="Estate pendiente a las inscriciones, son limitadas. No te quedes sin tu dorsal."
           cardTitle="Inscríbete"
           cardDescription="Asegura tu plaza en la carrera"
           cardIcon="M8 4a4 4 0 1 0 0 8 4 4 0 0 0 0-8Zm-2 9a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-1a4 4 0 0 0-4-4H6Zm7.25-2.095c.478-.86.75-1.85.75-2.905a5.973 5.973 0 0 0-.75-2.906 4 4 0 1 1 0 5.811ZM15.466 20c.34-.588.535-1.271.535-2v-1a5.978 5.978 0 0 0-1.528-4H18a4 4 0 0 1 4 4v1a2 2 0 0 1-2 2h-4.535Z"
