fotos del carrusel

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -124,13 +124,13 @@ const sponsors: Sponsor[] = [
             },
             {
               src: carousel4,
-              alt: 'Imagen de la vista de las tres Marías cubiertas por las nubes',
-              caption: 'Las Tres Marías entre nubes',
+              alt: 'Imagen de la vista de las tres Marías',
+              caption: 'Refugio de Las Tres Marías ',
             },
             {
               src: carousel5,
-              alt: 'Imagen del inicio de la carrera',
-              caption: 'Salida de la carrera',
+              alt: 'Valle de Arbas nevado',
+              caption: 'Valle de Arbas nevado',
             },
           ]}
         />
