--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -114,7 +114,7 @@ const sponsors: Sponsor[] = [
             { src: carousel1, alt: 'Imagen de subida al Palero', caption: 'Subida al Palero' },
             {
               src: carousel2,
-              alt: 'Imagen de la llegada al Palero',
+              alt: 'llegada al Palero',
               caption: 'Collado de la llegada al Palero',
             },
             {
