fotos carrusel 3(cambio de orden)

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -111,6 +111,16 @@ const sponsors: Sponsor[] = [
       <div class="reveal-element">
         <Carousel
           images={[
+            {
+              src: carousel4,
+              alt: 'Imagen de la vista de las tres Marías',
+              caption: 'Refugio de Las Tres Marías ',
+            },
+            {
+              src: carousel5,
+              alt: 'Valle de Arbas nevado',
+              caption: 'Valle de Arbas nevado',
+            },
             { src: carousel1, alt: 'Imagen de subida al Palero', caption: 'Subida al Palero' },
             {
               src: carousel2,
