cambio fecha cabecera

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -207,7 +207,7 @@ const sponsors: Sponsor[] = [
         </h2>
         <p class="text-center text-base mb-8 w-[90%] mx-auto">
           El Trail Valle de Arbas es una experiencia única que combina deporte, naturaleza y
-          comunidad. ¡Te esperamos el 10 de Mayo para disfrutar juntos de este evento inolvidable!
+          comunidad. ¡Te esperamos el de 22 y 23 Mayo para disfrutar juntos de este evento inolvidable!
         </p>
       </div>
 
