--- a/src/components/VideoHeader.astro
+++ b/src/components/VideoHeader.astro
@@ -15,7 +15,7 @@ const { src, title, poster } = Astro.props;
       <h1 class="text-4xl text-center font-extrabold w-[80%] md:text-5xl md:w-[90%]">{title}</h1>
       <div class="flex flex-col gap-2 justify-center items-center mt-6">
         <RoundedInfoField
-          text="9-10 Mayo 2025"
+          text=" 22 y 23 Mayo 2025"
           icon="M4 10h16m-8-3V4M7 7V4m10 3V4M5 20h14a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Zm3-7h.01v.01H8V13Zm4 0h.01v.01H12V13Zm4 0h.01v.01H16V13Zm-8 4h.01v.01H8V17Zm4 0h.01v.01H12V17Zm4 0h.01v.01H16V17Z"
         />
         <RoundedInfoField
