--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -34,53 +34,53 @@ const sponsors: Sponsor[] = [
     url: '#',
   },
   {
-    name: 'Deportes Castilla y León',
-    logo: '/images/sponsors/deportes.png',
+    name: 'federacion montaña CyL',
+    logo: '/images/sponsors/fede.jpg',
     url: '#',
   },
   {
-    name: 'Banco Regional',
-    logo: '/images/sponsors/banco.png',
+    name: 'Ezequiel',
+    logo: '/images/sponsors/ezequiel.jpg',
     url: '#',
   },
   {
-    name: 'Aseguradora Deportiva',
-    logo: '/images/sponsors/aseguradora.png',
+    name: 'RBH',
+    logo: '/images/sponsors/Rbh.png',
     url: '#',
   },
   {
-    name: 'Tienda de Deportes',
-    logo: '/images/sponsors/tienda-deportes.png',
+    name: 'Huevos Leon',
+    logo: '/images/sponsors/huevos.png',
     url: '#',
   },
   {
-    name: 'Hotel Rural Valle de Arbas',
-    logo: '/images/sponsors/hotel.png',
+    name: 'Casa Rural Valle de Arbas',
+    logo: '/images/sponsors/cr.jpg',
     url: '#',
   },
   {
-    name: 'Restaurante El Montañés',
-    logo: '/images/sponsors/restaurante.png',
+    name: 'Instituto Leonés de la Cultura',
+    logo: '/images/sponsors/cultura.png',
     url: '#',
   },
   {
-    name: 'Agua de Manantial',
-    logo: '/images/sponsors/agua.png',
+    name: 'Reserva de la Biosfera del Alto Bernesga',
+    logo: '/images/sponsors/biosfera.png',
     url: '#',
   },
   {
-    name: 'Bebidas Energéticas',
-    logo: '/images/sponsors/bebidas.png',
+    name: 'Balneario de Caldas de Luna',
+    logo: '/images/sponsors/balneario.png',
     url: '#',
   },
   {
-    name: 'Transportes Locales',
-    logo: '/images/sponsors/transporte.png',
+    name: 'Super de Villamanin',
+    logo: '/images/sponsors/super.jpg',
     url: '#',
   },
   {
-    name: 'Servicio Técnico',
-    logo: '/images/sponsors/tecnico.png',
+    name: 'Hotel Rio Viejo',
+    logo: '/images/sponsors/hotelrv.jpg',
     url: '#',
   },
 ];
