--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -35,7 +35,7 @@ const sponsors: Sponsor[] = [
   },
   {
     name: 'federacion montaña CyL',
-    logo: '/images/sponsors/fede.jpg',
+    logo: '/images/sponsors/federacion.jpg',
     url: '#',
   },
   {
@@ -45,7 +45,7 @@ const sponsors: Sponsor[] = [
   },
   {
     name: 'RBH',
-    logo: '/images/sponsors/Rbh.png',
+    logo: '/images/sponsors/rbh.png',
     url: '#',
   },
   {
