--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -74,6 +74,17 @@ const sponsors: Sponsor[] = [
     url: '#',
   },
   {
+    name: 'Restaurante y fabrica embutido Entrepeñas',
+    logo: '/images/sponsors/entrepenas.png',
+    url: '#',
+  },
+  {
+    name: 'Embitidos la pradera de Fontun',
+    logo: '/images/sponsors/fontun.jpg',
+    url: '#',
+  },
+  
+  {
     name: 'Super de Villamanin',
     logo: '/images/sponsors/super.jpg',
     url: '#',
@@ -81,6 +92,81 @@ const sponsors: Sponsor[] = [
   {
     name: 'Hotel Rio Viejo',
     logo: '/images/sponsors/hotelrv.jpg',
+    url: '#',
+  },
+    {
+    name: 'Camping Valle de Arbas',
+    logo: '/images/sponsors/camping.jpg',
+    url: '#',
+  },
+{
+    name: 'Embrujo',
+    logo: '/images/sponsors/embrujo.png',
+    url: '#',
+  },
+  {
+    name: 'Hotel Golpejar',
+    logo: '/images/sponsors/golpejar.jpg',
+    url: '#',
+  },
+  {
+    name: 'Casa rural Terraza del Valle',
+    logo: '/images/sponsors/terraza.jpg',
+    url: '#',
+  },
+  {
+    name: 'Hotel Rural Dias de Luna',
+    logo: '/images/sponsors/dias.png',
+    url: '#',
+  },
+  {
+    name: 'CR Rincón de la Rosa',
+    logo: '/images/sponsors/rincon.jpg',
+    url: '#',
+  },
+  {
+    name: 'Hospederia la Bodaguera',
+    logo: '/images/sponsors/bodaguera.png',
+    url: '#',
+  },
+  {
+    name: 'Hostal Bicis y Vacas',
+    logo: '/images/sponsors/vacas.jpg',
+    url: '#',
+  },
+  {
+    name: 'Hostal Fontañán',
+    logo: '/images/sponsors/fontanan.png',
+    url: '#',
+  },
+  {
+    name: 'Turismo activo Guheko',
+    logo: '/images/sponsors/guheko.png',
+    url: '#',
+  },
+  {
+    name: 'Turismo activo Tiki Aventura',
+    logo: '/images/sponsors/tiki.png',
+    url: '#',
+  },
+  {
+    name: 'Turismo activo Naturocio',
+    logo: '/images/sponsors/naturocio.jpg',
+    url: '#',
+  },
+  {
+    name: 'Dirthy Moustache Bike',
+    logo: '/images/sponsors/bicis.png',
+    url: '#',
+  },
+  {
+    name: 'La Despensa de Fer',
+    logo: '/images/sponsors/despensa.jpg',
+    url: '#',
+  },
+{
+    name: 'Carniceria de Nino',
+    logo: '/images/sponsors/nino.jpg',
     url: '#',
   },
 ];
