--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -131,7 +131,7 @@ const sponsors: Sponsor[] = [
   },
   {
     name: 'Hostal Bicis y Vacas',
-    logo: '/images/sponsors/vacas.jpg',
+    logo: '/images/sponsors/vacas.png',
     url: '#',
   },
   {
