--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -34,8 +34,13 @@ import SectionTitle from '../components/SectionTitle.astro';
 >
   <section>
     <SectionTitle
-      title="3 Distancias"
-      subtitle="Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti. Desde 10km hasta 42km, para todos los niveles."
+      title="3 Distancias el sabado y 1 el viernes"
+      subtitle="Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti. Tres distancias: 4,5km (cadete-infantil) 12km y 23 km para todos los niveles."
+      className="reveal-element"
+    />
+     <SectionTitle
+      title="Carreras del Sabado"
+      subtitle="3 Distancias"
       className="reveal-element"
     />
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 p-4">
