--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -40,7 +40,8 @@ import SectionTitle from '../components/SectionTitle.astro';
     />
      <SectionTitle
       title="Carreras del Sabado"
-      subtitle="3 Distancias"
+      subtitle="3 Distancias.Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti. Tres distancias: 4,5km (cadete-infantil) 12km y 23 km para todos los niveles."
+      className="reveal-element"
     />
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 p-4">
       <div class="lg:col-span-2">
