--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -35,12 +35,12 @@ import SectionTitle from '../components/SectionTitle.astro';
   <section>
     <SectionTitle
       title="3 Distancias el sabado y 1 el viernes"
-      subtitle="Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti. Tres distancias: 4,5km (cadete-infantil) 12km y 23 km para todos los niveles."
+      subtitle=" A continuación te describimos las carreras"
       className="reveal-element"
     />
      <SectionTitle
-      title="Carreras del Sabado"
-      subtitle="3 Distancias.Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti. Tres distancias: 4,5km (cadete-infantil) 12km y 23 km para todos los niveles."
+      title="Carreras del Sabado (3 distancias)"
+      subtitle="Hemos preparado varias categorías en el trail para que puedas elegir la que más se adapte a ti. Tres distancias: 4,5km (cadete-infantil) 12km y 23 km para todos los niveles."
       className="reveal-element"
     />
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 p-4">
