--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -52,7 +52,7 @@ import SectionTitle from '../components/SectionTitle.astro';
           ,
           distance="23"
           ,
-          uphill="+2000"
+          uphill="+/-2050"
           ,
           link="arbas-infinito"
         />
@@ -64,7 +64,7 @@ import SectionTitle from '../components/SectionTitle.astro';
         ,
         distance="12,5"
         ,
-        uphill="850"
+        uphill="+/-850"
         ,
         link="arbas-luna"
       />
@@ -73,7 +73,7 @@ import SectionTitle from '../components/SectionTitle.astro';
         ,
         description="Recorrido rápido y divertido para los participantes de la categoría infantil"
         ,
-        distance="4,5"
+        distance="+/-4,5"
         ,
         uphill="190"
         ,
@@ -85,7 +85,7 @@ import SectionTitle from '../components/SectionTitle.astro';
   <section>
     <SectionTitle
       title="Carrera del viernes"
-      subtitle="Carrera de bajada especial el viernes"
+      subtitle="NOVEDAD: Carrera de bajada especial el viernes al altardecer (21:00)"
       className="reveal-element"
     />
     <div class="flex justify-center p-4">
